kubernetes/apps/media/pyload/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: pyload-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: pyload
    egress:
      - toPorts:
          - ports:
              - port: "443"
